# test_chatbot

./: .env.example  .gitignore  Makefile  README.md  plan-issue1.md  plan.md  research.md
.claude/: settings.local.json
.claude/commands/: implement-issue.md
.claude/rules/: git-project-mgmt.md
.claude/skills/git-project-mgmt/: SKILL.md
.claude/skills/implement-issue/: SKILL.md
.github/workflows/: claude.yml
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 015e6b62da65_create_sessions_and_messages_tables.py  2cede45b80e9_create_users_table.py
backend/app/: claude_runner.py  config.py  db.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  search.py  sessions.py
backend/app/core/: security.py
backend/app/models/: __init__.py  chat.py  user.py
backend/app/schemas/: auth.py  search.py  session.py
backend/tests/: conftest.py  test_auth_api.py  test_chat_concurrency.py  test_chat_disconnect.py  test_chat_models.py  test_chat_reattach.py  test_chat_send_sse.py  test_claude_runner.py  test_health.py  test_search_api.py  test_sessions_api.py  test_user_model.py
frontend/: package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: auth.spec.ts
frontend/src/: App.test.tsx  App.tsx  HomePage.tsx  test-setup.ts
frontend/src/auth/: AuthContext.tsx  LoginPage.test.tsx  LoginPage.tsx  RequireAuth.test.tsx  RequireAuth.tsx  SignupPage.test.tsx  SignupPage.tsx  api.ts  context.ts  useAuth.ts  validation.ts
frontend/src/chat/: AssistantMarkdown.test.tsx  AssistantMarkdown.tsx  (+10 more)
(+9 files in other folders)
