[project]
name = "test-chatbot-backend"
version = "0.1.0"
description = "FastAPI backend for Claude Code chatbot"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "alembic>=1.15",
    "pydantic-settings>=2.8",
    "email-validator>=2.2",
    "passlib[bcrypt]>=1.7",
    "bcrypt<4.1",
    "python-jose[cryptography]>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
    "black>=25.1",
    "ruff>=0.11",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
